<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">ArthQuest</string>
    <string name="title_activity_main">ArthQuest</string>
    <string name="package_name">com.arthquest.pwa</string>
    <string name="custom_url_scheme">com.arthquest.pwa</string>
    <string name="widget_add_transaction_label">Add transaction</string>
    <string name="shortcut_add_transaction_long">Add transaction</string>
    <string name="shortcut_add_category_short">Add category</string>
    <string name="shortcut_add_category_long">Add category</string>
    <string name="shortcut_new_quest_short">New quest</string>
    <string name="shortcut_new_quest_long">New quest</string>
</resources>
